--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "homepage": "https://github.com/jayesbe/react-native-cacheable-image#readme",
   "dependencies": {
     "crypto-js": "^3.1.6",
-    "react-native-fs": "^1.3.0",
-    "url-parse": "^1.1.1",
-    "react-native-responsive-image": "^1.2.0"
+    "react-native-fs": "^2.0.1-rc",
+    "url-parse": "^1.1.3",
+    "react-native-responsive-image": "^1.3.0"
   }
 }
